--- a/nginx.conf
+++ b/nginx.conf
@@ -30,7 +30,7 @@ server {
         rewrite ^/api/(.*) /$1 break;
         
         # Proxy to the backend server container
-        proxy_pass http://multiagent-chat-server:3000;
+        proxy_pass http://med-agent-hub-server:3000;
         
         # Proxy headers
         proxy_http_version 1.1;
@@ -67,7 +67,7 @@ server {
     
     # Direct backend access (without /api prefix)
     location ~ ^/(chat|generate|manifest|health) {
-        proxy_pass http://multiagent-chat-server:3000;
+        proxy_pass http://med-agent-hub-server:3000;
         
         proxy_http_version 1.1;
         proxy_set_header Host $host;
