--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ isort = "^5.12.0"
 flake8 = "^6.0.0"
 pytest = "^7.4.0"
 pyyaml = "^6.0.1"
+honcho = "^1.1.0"
+setuptools = "^75.0.0"
 
 [build-system]
 requires = ["poetry-core"]
